syntax = "proto3";

package logger;

// Log is the main object in the file which represent the log entry in the
// log file.
message Log {
    int64 time = 1;

    oneof data {
        RouterState state = 2;
        Payment payment = 3;
        ChannelChange channel_change = 4;
    }
}

// RouterState is a type of log entry which describes the state/view of the
// router local lightning network and number of free funds which exist under
// control router.
message RouterState {
    // Channels represent the local lightning network topology.
    repeated Channel channels = 1;

    // FreeBalance it is free number of funds under router managment which
    // could be used to lock them in the channels.
    uint64 free_balance = 2;

    // PendingBalance is the amount of funds which in the process of
    // being accepted by blockchain.
    uint64 pending_balance = 3;

    // AverageChangeUpdateDuration is number of milliseconds which
    // is needed to change of state of chanel over blockchain.
    uint64 average_change_update_duration = 4;
}

// Channel is used as the building block in describing of the lightning
// network topology.
message Channel {
    string user_id = 1;
    string channel_id = 2;
    uint64 user_balance = 3;
    uint64 router_balance = 4;
    bool is_pending = 5;
}

// Payment represent the attempt of peer in the local lightning network to
// send the payment to some another peer in the network.
message Payment {
    PaymentStatus status = 1;

    string sender = 2;
    string receiver = 3;
    uint64 amount = 5;

    // Earned is the number of funds which router earned by making this payment.
    // In case of rebalncing router will pay the fee, for that reason this
    // number will be negative.
    int64 earned = 6;
}

enum PaymentStatus {
    // Null is used to catch that field wasn't initialised.
    null = 0;

    success = 1;

    // UnsufficientFunds means that router haven't posses/locked enough funds
    // with receiver user to route thouth the payment.
    unsufficient_funds = 2;

    // ExternalFail means that receiver failed to receive payment because of
    // the unknown to us reason.
    external_fail = 3;
}

message ChannelChange {
    ChannelChangeType type = 1;

    string user_id = 2;
    string channel_id = 3;

    uint64 user_balance = 4;
    uint64 router_balance = 5;

    // Fee which was taken by blockchain decentrilized computer / mainers or
    // some other form of smart contract manager.
    uint64 fee = 6;
}

// ChannelChangeType represent the type of action which were attempted to
// apply to the channel.
enum ChannelChangeType {
    // ...
    openning = 0;

    // Opened is used when this channel was just created, and haven't been in
    // local network before.
    opened = 1;

    // ...
    closing = 2;

    // Closed is used when number locked funds / balances of both channel
    // participant equal to zero.
    closed = 3;

    // ...
    udpating = 4;

    // Udpated is used when one of the participants decides to update its
    // channel balance.
    updated = 5;
}